# ai-platform

./: .gitignore  README.md  docker-compose.yml
Classification_Program_ML/: data_preprocessor.py  production_classifier.py
backend/: celery_app.py  celery_config.py  check_worker.py  fix2.sh  frontend_test_endpoints.py  main.py  mainFix.sh  pyproject.toml  requirements.txt  run_worker.py  start_worker_windows.bat  test_api_integration.py  test_full_training_flow.py  test_worker.py  worker.py
backend/app/: auth.py
backend/app/core/: auth.py  database.py
backend/app/routers/: inference.py  projects.py  training.py  upload.py
backend/app/schemas/: dataset.py  project.py  user.py
backend/app/services/: __init__.py  file_processor.py  ml_trainer.py
backend/backend/: main.py
backend/backup/: debug_main.py  main.py
backend/tasks/: training_tasks.py
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/Auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/Common/: ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/components/Dashboard/: Dashboard.tsx  ProjectCard.tsx  StatsCard.tsx  UsageChart.tsx
frontend/src/components/FileUpload/: ColumnMapper.tsx  DataPreview.tsx  FileUploader.tsx  index.ts
frontend/src/hooks/: useApi.ts  useAuth.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Projects.tsx  Register.tsx  TestFileUpload.tsx  Training.tsx  TrainingWorkflow.tsx
frontend/src/services/: api.ts  auth.ts  types.ts
frontend/src/theme/: theme.ts
frontend/src/utils/: constants.ts  helpers.ts
(+7 files in other folders)
